--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import '@fontsource/style-script';
+import '@fontsource/poppins/300.css';
+import '@fontsource/sulphur-point';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,16 +13,13 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
-		<slot />
+	<body class="bg-thauane-black h-dvh p-3">
+		<div class=" overflow-hidden h-full ring-thauane-red shadow-thauane-red drop-shadow-lg  ring-1 rounded-md">
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+
 </style>
