start timesline page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,8 +13,8 @@ import '@fontsource/sulphur-point';
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body class="bg-thauane-black h-dvh p-3">
-		<div class=" overflow-hidden h-full ring-thauane-red shadow-thauane-red drop-shadow-lg  ring-1 rounded-md">
+	<body class="bg-thauane-black min-h-dvh p-3">
+		<div class="min-h-dvh ring-thauane-red shadow-thauane-red drop-shadow-lg  ring-1 rounded-md">
 			<slot />
 		</div>
 	</body>
