COMPLETO O ESTILO SÓ POR OS TEXTOS E FEHOCU

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,31 +13,12 @@ import "@fontsource/sulphur-point";
     <meta name="generator" content={Astro.generator} />
     <title>Astro Basics</title>
   </head>
-  <body class="bg-thauane-black h-dvh p-3">
+  <body class="bg-thauane-black h-dvh p-3 md:p-0">
     <div
-      class="h-full overflow-y-scroll overflow-x-hidden ring-thauane-red shadow-thauane-red drop-shadow-lg ring-1 rounded-md"
+      class=" h-full overflow-y-auto overflow-x-hidden ring-thauane-red shadow-thauane-red drop-shadow-lg ring-1 rounded-md "
     >
       <slot />
     </div>
   </body>
 </html>
 
-<style>
-  @keyframes appear {
-    0% {
-      opacity: 0;
-      transform: scale(0.5);
-    }
-
-    40% {
-      opacity: 1;
-      transform: scale(1.1);
-    }
-
-    60%,
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-</style>
