--- a/src/pages/timeline.astro
+++ b/src/pages/timeline.astro
@@ -5,8 +5,8 @@ import Timeline from "../components/Timeline";
 
 <Layout>
     <div class="p-7 text-thauane-pink flex  flex-col h-full">
-        <h1 class="font-sulfur font-black text-2xl mb-5  shrink absolute top-5 z-20 bg-thauane-black">Nossa história juntos. </h1>
+        <h1 class="font-sulfur font-black text-2xl md:text-5xl mb-5  shrink absolute top-5 z-20 bg-thauane-black">Nossa história juntos. </h1>
         <Timeline client:load/>
-            <button class="bg-thauane-middle font-poppins font-semibold w-full p-1 hover:brightness-110 hover:scale-105 transition-all rounded-full text-thauane-black"><a href="/">Voltar </a> </button>
+        <button class="bg-thauane-middle font-poppins font-semibold w-full p-1 hover:brightness-110 hover:scale-105 transition-all rounded-full text-thauane-black"><a href="/">Voltar </a> </button>
     </div>
 </Layout>
