--- a/src/pages/message.astro
+++ b/src/pages/message.astro
@@ -4,8 +4,8 @@ import Typewriter from '../components/TypeWriter'
 ---
 
 <Layout>
-  <div class="p-8 h-full flex flex-col">
-    <h1 class="text-thauane-pink text-4xl font-bold basis-1/12">Oi, dsadsadsasd </h1>
+  <div class="p-8 h-full flex flex-col gap-3">
+    <h1 class="text-thauane-pink text-4xl font-bold basis-1/12 py-3">Oi minha princesa. </h1>
     <Typewriter client:load/>
     <button class="bg-thauane-middle font-poppins font-semibold w-full md:w-3/12 m-auto basis-3 h-10 p-1 hover:brightness-110 hover:scale-105 transition-all rounded-full text-thauane-black"><a href="/">Voltar </a> </button>
   </div>
